--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.0.3",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
+    "npm": "^10.8.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
@@ -40,6 +41,7 @@
     "redux": "^5.0.1",
     "simplebar": "^5.3.8",
     "simplebar-react": "^2.4.1",
+    "start": "^5.1.0",
     "sweetalert2": "^11.10.8",
     "sweetalert2-react-content": "^5.0.7",
     "typescript": "4.8.3",
